src/main/java/examples/basic/invalid/BasicSendWithInvalidFrom.java
package examples.basic.invalid;

import com.socketLabs.SendResponse;
import examples.Example;

public class BasicSendWithInvalidFrom implements Example {

    public SendResponse RunExample ()  throws Exception {
        return null;
    }
}
